Fixed day label alignment.

--- a/less/layout.less
+++ b/less/layout.less
@@ -24,8 +24,12 @@
 
   .pickr-days-labels {
     .pickr-days-label {
-      width: 47px;
+      width: 48px;
       float: left;
+
+      &:first-child {
+        width: 47px;
+      }
     }
 
     &:after {
